Ensure Modal background covers all background

--- a/src/components/Modal/Modal.scss
+++ b/src/components/Modal/Modal.scss
@@ -2,7 +2,7 @@
 	background-color: rgba(30, 30, 30, .5);
 	height: 100%;
 	left: 0;
-	position: absolute;
+	position: fixed;
 	top: 0;
 	width: 100%;
 
